--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "watch": "nodemon hook.js"
+  },
   "dependencies": {
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
@@ -16,6 +19,7 @@
     "@types/graphql": "^14.2.0",
     "@types/jest": "^24.0.12",
     "@types/joi": "^14.3.3",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/log4js": "^2.3.5",
     "@types/morgan": "^1.7.35",
     "@types/node": "^12.0.0",
@@ -44,6 +48,7 @@
     "helmet": "^3.17.0",
     "jest": "^24.8.0",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "log4js": "^4.1.0",
     "lusca": "^1.6.1",
     "morgan": "^1.9.1",
