--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/morgan": "^1.7.35",
     "@types/node": "^12.0.0",
     "@types/passport": "^1.0.0",
+    "@types/passport-google-oauth": "^1.0.41",
     "@types/passport-local": "^1.0.33",
     "@types/pg": "^7.4.14",
     "@types/supertest": "^2.0.7",
@@ -55,6 +56,8 @@
     "lusca": "^1.6.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-token": "^0.1.2",
     "passport-local": "^1.0.0",
     "pg": "^7.10.0",
     "supertest": "^4.0.2"
