--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^24.0.12",
     "@types/joi": "^14.3.3",
     "@types/jsonwebtoken": "^8.3.2",
+    "@types/lodash": "^4.14.129",
     "@types/log4js": "^2.3.5",
     "@types/morgan": "^1.7.35",
     "@types/node": "^12.0.0",
@@ -28,6 +29,7 @@
     "@types/passport-google-oauth": "^1.0.41",
     "@types/passport-local": "^1.0.33",
     "@types/pg": "^7.4.14",
+    "@types/redis": "^2.8.12",
     "@types/supertest": "^2.0.7",
     "amqplib": "^0.5.3",
     "babel-polyfill": "^6.26.0",
@@ -52,6 +54,7 @@
     "jest": "^24.8.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
     "log4js": "^4.1.0",
     "lusca": "^1.6.1",
     "morgan": "^1.9.1",
@@ -60,6 +63,7 @@
     "passport-google-token": "^0.1.2",
     "passport-local": "^1.0.0",
     "pg": "^7.10.0",
+    "redis": "^2.8.0",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
