--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express-session": "^1.16.1",
     "glob": "^7.1.3",
     "graphql": "^14.2.1",
+    "graphql-custom-directive": "^0.2.0",
     "helmet": "^3.17.0",
     "jest": "^24.8.0",
     "joi": "^14.3.1",
