--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express-graphql": "^0.8.0",
     "@types/express-session": "^1.15.12",
     "@types/graphql": "^14.2.0",
+    "@types/graphql-type-json": "^0.3.0",
     "@types/jest": "^24.0.12",
     "@types/joi": "^14.3.3",
     "@types/jsonwebtoken": "^8.3.2",
@@ -51,6 +52,7 @@
     "glob": "^7.1.3",
     "graphql": "^14.2.1",
     "graphql-custom-directive": "^0.2.0",
+    "graphql-type-json": "^0.3.0",
     "helmet": "^3.17.0",
     "jest": "^24.8.0",
     "joi": "^14.3.1",
