ADD: added the ability to request announcements through GraphQL

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/register": "^7.4.4",
     "@types/amqplib": "^0.5.11",
+    "@types/axios": "^0.14.0",
     "@types/boom": "^7.2.1",
     "@types/config": "^0.0.34",
     "@types/connect-pg-simple": "^4.2.0",
@@ -33,6 +34,7 @@
     "@types/redis": "^2.8.12",
     "@types/supertest": "^2.0.7",
     "amqplib": "^0.5.3",
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "boom": "^7.3.0",
@@ -60,6 +62,7 @@
     "lodash": "^4.17.11",
     "log4js": "^4.1.0",
     "lusca": "^1.6.1",
+    "mongoose": "^5.5.11",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
